--- a/src/sass/modules/_sidemenu.sass
+++ b/src/sass/modules/_sidemenu.sass
@@ -1,11 +1,27 @@
 @import "./sidemenuhome"
+/* width */
+::-webkit-scrollbar 
+    width: 10px
+
+/* Track */
+::-webkit-scrollbar-track 
+    background: #f1f1f1
+ 
+/* Handle */
+::-webkit-scrollbar-thumb 
+    background: #888
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover
+    background: #555
+
 .side-menu
-    position: fixed
+    position: absolute
     top: 0
     left: 0
     height: 100%
     width: $sidemenuWidth
-    overflow: scroll
+    overflow-y: scroll
     background: $darkGrey
     .avatar
         background: $lightRed
@@ -116,7 +132,6 @@
     background: rgba(0, 0, 0, .6)
     padding: .2rem
     color: $white
-    z-index: 10
     & .text
         padding: 0
         margin: 0
